--- a/.gitignore
+++ b/.gitignore
@@ -73,6 +73,8 @@ src/qt/test/moc*.cpp
 
 # Compilation and Qt preprocessor part
 *.qm
+.qmake.cache
+.qmake.stash
 Makefile
 bitcoin-qt
 Bitcoin-Qt.app
@@ -107,6 +109,8 @@ qa/pull-tester/run-bitcoind-for-test.sh
 qa/pull-tester/tests-config.sh
 qa/pull-tester/cache/*
 qa/pull-tester/test.*/*
+
+.vscode
 
 !src/leveldb*/Makefile
 
