Fix build paths

--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,7 @@ src/bitcoin
 src/bitcoind
 src/bitcoin-cli
 src/bitcoin-tx
-src/test/test_bitcoin
+src/test_bitcoin
 src/qt/test/test_bitcoin-qt
 
 # autoreconf
